[package]
name = "elf_parser"
version = "0.1.0"
edition = "2021"
authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["Starry"]

[dependencies]
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
page_table_entry = { git = "https://github.com/Starry-OS/page_table_entry.git" }
xmas-elf = "0.9.0"
memory_addr = { git = "https://github.com/Starry-OS/memory_addr.git" }
log = "0.4"
cfg-if = "1.0"